fixed spacing

--- a/src/Pages/Home/Home.styles.scss
+++ b/src/Pages/Home/Home.styles.scss
@@ -20,6 +20,8 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 7rem;
+    margin-top: -8rem;
+
     .experienceHeader {
       font-size: 5rem;
       margin-bottom: 3rem;
